--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-carousel": "^0.0.3",
     "react-leaflet": "^3.2.0",
     "react-responsive-carousel": "^3.2.20",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-swipeable-views": "^0.14.0",
