--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-google-map-picker": "^1.2.3",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-carousel": "^0.0.3",
+    "react-image-crop": "^8.6.12",
     "react-leaflet": "^3.2.0",
     "react-responsive-carousel": "^3.2.20",
     "react-reveal": "^1.2.2",
