--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
     "leaflet": "^1.7.1",
+    "popmotion": "^9.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-map-picker": "^1.2.3",
